@@ -1,3 +1,9 @@
+12/10/2004  version 0.3 pre6    Ian Lewis <IanLewis@member.fsf.org>
+
+    * Fixed bug that tried to create a new instance of a main class
+      even if the jar wasn't a plugin
+    * Updated logic to created the options panels for plugins
+
 12/08/2004  version 0.3 pre5    Ian Lewis <IanLewis@member.fsf.org>
 
     * Updated the ant build document.
